Datatables CSS fix for controls overlapping numbers at bottom to table. Take 3

--- a/assets/css/extended/theme-vars.css
+++ b/assets/css/extended/theme-vars.css
@@ -2,13 +2,17 @@
     --main-width: 1000px;
 }
 
+/* DataTables layout fix */
 .dataTables_wrapper .row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    clear: both;
 }
 
-.dataTables_length, .dataTables_filter {
-    padding-bottom: 1em;
+.dataTables_wrapper .dataTables_info {
+    float: left;
+    padding-top: 0.85em;
+}
+
+.dataTables_wrapper .dataTables_paginate {
+    float: right;
+    text-align: right;
 }
